--- a/doc/search/search.css
+++ b/doc/search/search.css
@@ -83,7 +83,7 @@
 }
 
 .hit_int, .hit_cla, .hit_enu, .hit_pkg{
-    color: #0a86bd;
+    color: #0092d2;
     font-style: italic;
 }
 
